// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert unknown unit to throw error matching snapshot 1`] = `"unknown unit"`;

exports[`convert when 4:30 minkm expect model to match snapshot 1`] = `
Object {
  "kmh": 13.333,
  "mih": 8.285,
  "minkm": "4:30",
  "minmi": "7:14.52",
}
`;

exports[`convert when 4:40 minkm expect model to match snapshot 1`] = `
Object {
  "kmh": 12.857,
  "mih": 7.989,
  "minkm": "4:40",
  "minmi": "7:30.60",
}
`;

exports[`convert when 5:00 minkm expect model to match snapshot 1`] = `
Object {
  "kmh": 12,
  "mih": 7.457,
  "minkm": "5:00",
  "minmi": "8:02.76",
}
`;

exports[`convert when 12 kmh expect model to match snapshot 1`] = `
Object {
  "kmh": 12,
  "mih": 7.457,
  "minkm": "5:00.00",
  "minmi": "8:02.76",
}
`;

exports[`convert when 13.6 kmh expect model to match snapshot 1`] = `
Object {
  "kmh": 13.6,
  "mih": 8.451,
  "minkm": "4:24.72",
  "minmi": "7:06.00",
}
`;
